--- a/raon-control/test/getData.html
+++ b/raon-control/test/getData.html
@@ -46,7 +46,7 @@
             }
 
         };
-        var server = "http://localhost/2021-01";
+        var server = "http://192.168.0.105/2021-01";
         xhttp.open("GET", server, true);
         xhttp.send();
     }
