--- a/raon-control/archive.html
+++ b/raon-control/archive.html
@@ -233,7 +233,7 @@
 			}
 
 		};
-		var rName = "http://localhost:17665/mgmt/bpl/getPVStatus?pv=" + retrievalName;
+		var rName = "http://192.168.80.54:17665/mgmt/bpl/getPVStatus?pv=" + retrievalName;
 		xhttp.open("GET", rName, true);
 		xhttp.send();
 	}
